Julian Fix design structures

--- a/index.html
+++ b/index.html
@@ -6,20 +6,11 @@
   </head>
   <body>
     <h1>Stack and Queue Game</h1>
-    <div id="stack-container">
-      <h2>Stack</h2>
-      <ul id="stack" class="stack-container"></ul>
-      <div class="buttons">
-        <button id="stack-push">Push</button>
-        <button id="stack-pop">Pop</button>
-        
-      </div>
-    </div>
-    <div id="queue-container">
-      <h2>Queue</h2>
-      <ul id="queue"></ul>
-      <button id="queue-enqueue">Enqueue</button>
-      <button id="queue-dequeue">Dequeue</button>
+    <h3>Inicio</h3>
+    <div class="next-page">
+      <a href="stack.html" class="next-page-button">
+        <button id="next">></button>
+      </a>
     </div>
     <script src="js/main.js"></script>
   </body>
