Update CSS and image paths in stack.html, index.html, and queue.html

--- a/index.html
+++ b/index.html
@@ -2,16 +2,34 @@
 <html>
   <head>
     <title>Stack and Queue Game</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/index.css" />
   </head>
   <body>
-    <h1>Stack and Queue Game</h1>
-    <h3>Inicio</h3>
-    <div class="next-page">
-      <a href="stack.html" class="next-page-button">
-        <button id="next">></button>
+    <div class="Disco">
+      <img src="img/Disco.svg" alt="Disco central">
+
+    </div>
+    <img class="conexion" src="img/Recurso 12.svg" alt="Conexión">
+    <div class="btn">
+      <a href="queue.html" class="next-page-button">
+        <button id="inicio">Inicio</button>
       </a>
     </div>
+    <div class="grp-arrizq">
+      <img src="img/Cuadrados.svg" alt="Cuadrados">
+      <img src="img/Barra.svg" alt="Barra horizontal">
+    </div>
+    <div class="grp-arrder">
+      <img src="img/LineaVertical.svg" alt="Vertical">
+      <img src="img/CiculoCuadrado.svg" alt="Barra horizontal">
+      <img src="img/CC&Linea.svg" alt="Vertical">
+    </div>
+    <img class="flechasizq" src="img/FlechaIzquierda.svg" alt="Flechas">
+    <div class="grp-abaizq">
+      <img src="" alt="Hace falta gpi">
+      <img src="img/Barra.svg" alt="Barra horizontal">
+    </div>
+
     <script src="js/main.js"></script>
   </body>
 </html>
