--- a/queue.html
+++ b/queue.html
@@ -3,17 +3,40 @@
 
 <head>
     <title>Stack and Queue Game</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/queue.css" />
 </head>
 
 <body>
-    <h1>Stack and Queue Game</h1>
-    <h2>Queue</h2>
-    <ul id="queue" class="stack-container-queue"></ul>
+    <div class="barra-sup">
+        <img src="img/Recurso_18.png" alt="Barra superior">
+        <img src="img/Recurso_19.png" alt="Barra superior">
+        <img src="img/Recurso_17.png" alt="Barra superior">
+        <img src="img/Recurso_19.png" alt="Barra superior">
+        <img src="img/Recurso_18.png" alt="Barra superior">
+    </div>
+    <div class="container">
+        <img class="img-1" src="img/Recurso_9.png" alt="cuadro">
+        <img class="img-2" src="img/Recurso_12.png" alt="cuadro">
+        <img class="img-3" src="img/Recurso_11.png" alt="bateria">
+        <img class="flecha1" src="img/flecha.png" alt="flecha">
+        <img class="flecha2" src="img/flecha.png" alt="flecha">
+        <ul id="queue" class="stack-container-queue"></ul>
+    </div>
+
     <div class="buttons">
         <button id="queue-enqueue">Enqueue</button>
         <button id="queue-dequeue">Dequeue</button>
     </div>
+    <div>
+        <a href="stack.html" class="next-page-button">
+            <img class="btnsig" src="img/Recurso_13.svg" alt="Siguiente">
+        </a>
+        <a href="index.html" class="back-page-button">
+            <img class="btnant" src="img/Recurso_14.svg" alt="Anterior">
+        </a>
+    </div>
+
+
     <script src="js/main2.js"></script>
 </body>
 
