--- a/stack.html
+++ b/stack.html
@@ -3,22 +3,24 @@
 
 <head>
     <title>Stack and Queue Game</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/stack.css" />
 </head>
 
 <body>
-    <h1>Stack and Queue Game</h1>
+    <img src="img/stack_izq.png" alt="stack" class="stack-izq" />
+    <img src="img/superior.png" alt="superior" class="superior" />
+    <h1>CREA TU PLAYLIST</h1>
     <div id="stack-container">
-        <h2>Stack</h2>
         <ul id="stack" class="stack-container"></ul>
         <div class="buttons">
             <button id="stack-push">Push</button>
             <button id="stack-pop">Pop</button>
         </div>
     </div>
-    <div class="next-page">
-        <a href="queue.html" class="next-page-button">
-            <button id="next">></button>
+    <img src="img/stack_ext.png" alt="barra" class="ico-ext" />
+    </div>
+        <a href="queue.html" class="back-page-button">
+            <img class="btnant" src="img/Recurso_14.svg" alt="Anterior">
         </a>
     </div>
     <script src="js/main.js"></script>
