Se agrego stact

--- a/stack.html
+++ b/stack.html
@@ -7,22 +7,27 @@
 </head>
 
 <body>
-    <img src="img/stack_izq.png" alt="stack" class="stack-izq" />
     <img src="img/superior.png" alt="superior" class="superior" />
-    <h1>CREA TU PLAYLIST</h1>
-    <div id="stack-container">
+
+    <div class="container">
+        <h1>Crea tu playlist</h1>
+        <img src="img/stack_izq.png" alt="stack" class="stack-izq" />
         <ul id="stack" class="stack-container"></ul>
-        <div class="buttons">
-            <button id="stack-push">Push</button>
-            <button id="stack-pop">Pop</button>
-        </div>
     </div>
+
+    <div class="buttons-stack">
+        <button id="stack-push">Push</button>
+        <button id="stack-pop">Pop</button>
+    </div>
+
     <img src="img/stack_ext.png" alt="barra" class="ico-ext" />
+    
     </div>
         <a href="queue.html" class="back-page-button">
             <img class="btnant" src="img/Recurso_14.svg" alt="Anterior">
         </a>
     </div>
+    
     <script src="js/main.js"></script>
 </body>
 
